# FDISS

./: README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
fdiss/: __init__.py  fdiss.py
fdiss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
