[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdiss"
version = "0.1.0"
description = "Foveal Disc IoU Scanpath Score - A biologically grounded scanpath similarity metric"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mohammed Amine Kerkouri", email = "ma.kerkouri@f-initiatives.fr"},
    {name = "Marouane Tliba"},
    {name = "Aladine Chetouani"},
]
keywords = ["eye-tracking", "scanpath", "similarity", "foveal", "fixation", "iou"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/yourusername/FDISS"
Repository = "https://github.com/yourusername/FDISS"
Issues = "https://github.com/yourusername/FDISS/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fdiss*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
